Replace sun.misc.BASE64Encoder with java.util.Base64
sun.misc.BASE64Encoder is no longer accessible in Java 9.